# Cloud-Guard

./: .env.example  .gitignore  README.md  docker-compose.full.yml  docker-compose.yml  vercel.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/system-health/: route.ts
infra/aws/: msk-kafka.tf  rds-postgres.tf
services/alert-service/: Dockerfile  build.gradle.kts
services/alert-service/src/main/kotlin/com/cloudguard/alerts/: EmailService.kt  SlackService.kt
services/alert-service/src/main/resources/: application.yml
services/analytics-engine/: Dockerfile  build.sbt
services/analytics-engine/src/main/scala/com/cloudguard/analytics/: Main.scala
services/anomaly-detector/: Dockerfile  requirements.txt
services/anomaly-detector/app/: main.py  model.py
services/api-gateway/: Dockerfile  pom.xml
services/api-gateway/src/main/java/com/cloudguard/gateway/: GatewayApplication.java
services/api-gateway/src/main/java/com/cloudguard/gateway/controllers/: AuthController.java  RootController.java
services/api-gateway/src/main/java/com/cloudguard/gateway/dto/: JwtResponse.java  (+3 more)
services/api-gateway/src/main/resources/: application.yml
services/metrics-collector/: CMakeLists.txt  Dockerfile  main.cpp
services/metrics-collector/include/: aws_collector.h  azure_collector.h  collector.h  gcp_collector.h  kafka_producer.h  system_monitor.h
services/metrics-collector/src/: aws_collector.cpp  azure_collector.cpp  gcp_collector.cpp  kafka_producer.cpp  system_monitor.cpp
sql/: schema.sql
(+7 files in other folders)
